feat: add the guild voice channel with owner and chief mutes